dist_man1_MANS=

if BUILD_FINALCOIND
  dist_man1_MANS+=finalcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=finalcoin-qt.1
endif

if BUILD_FINALCOIN_CLI
  dist_man1_MANS+=finalcoin-cli.1
endif

if BUILD_FINALCOIN_TX
  dist_man1_MANS+=finalcoin-tx.1
endif

if BUILD_FINALCOIN_UTIL
  dist_man1_MANS+=finalcoin-util.1
endif

if ENABLE_WALLET
if BUILD_FINALCOIN_WALLET
  dist_man1_MANS+=finalcoin-wallet.1
endif
endif
